# pdf-sentinel

./: .gitignore  .readthedocs.yaml  251113-pdf-sentinel-project-summary.docx  251113-project-summary.docx  README.md  SECURITY_AUDIT_REPORT.md  generate-project-summary.js  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
docs/: architecture.md  changelog.md  contributing.md  index.md  license.md  requirements.txt  troubleshooting.md
docs-archive/: PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md
docs/architecture/: performance.md  research.md
docs/development/: release-process.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/user-guide/: cli-usage.md  conversion-engines.md  python-api.md  systemd-service.md
src/pdf_sentinel/: __init__.py  cli.py  config.py  handlers.py  watcher.py
src/pdf_sentinel/converters/: __init__.py  base.py  markitdown.py  pdfplumber.py  pymupdf.py
tests/: __init__.py  test_config.py  test_converters.py
